# rust-cargo-tsgen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml
.github/: settings.yml
.github/workflows/: release-plz.yml  rust.yml  security-audit.yml  typos.yml
src/: cli.rs  error.rs  lib.rs
src/reader/: grammar.rs  mod.rs  node_types.rs
src/writer/: constants.rs  mod.rs  wrapper.rs
templates/: constants.rust  wrapper.compound_node.rust  wrapper.root_node.rust  wrapper.rust  wrapper.value_node.rust
test/: node-types.json
tests/: grammar.json  grammar.rs  nodes.rs  test_generated_grammar.rs
tests/grammar/: nodes.rs
